# research-repo-setup

./: .gitignore  README.md  README_STABLE.md  conda_export.txt  contact_graspnet_env.yml  install.sh  run_setup_test.sh  setup_stable_env.sh  setup_stable_env_v2.sh  test_installation.py  verify_setup.sh
configs/: pyproject.toml  requirements.txt  requirements_stable.txt
scripts/: 01_setup_python.sh  02_setup_environment.sh  03_download_dataset.sh  04_download_code.sh  parse_conda_env.py
